--- a/report-aggregate/pom.xml
+++ b/report-aggregate/pom.xml
@@ -9,6 +9,7 @@
         <version>1.102-SNAPSHOT</version>
     </parent>
     <artifactId>report-aggregate</artifactId>
+    <name>datamigrator-report-aggregate</name>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
