--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.osgiliath.datamigrator</groupId>
@@ -10,6 +11,7 @@
     <groupId>net.osgiliath.datamigrator.modules</groupId>
     <artifactId>data-migrator-modules</artifactId>
     <packaging>pom</packaging>
+    <name>datamigrator-modules-parent</name>
     <build>
         <plugins>
             <plugin>
@@ -24,9 +26,9 @@
     </modules>
     <profiles>
         <profile>
-			<id>release</id>
-			<build>
-				<plugins>
+            <id>release</id>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -35,12 +37,12 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
                     </plugin>
-					<plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
