--- a/sample-mono/pom.xml
+++ b/sample-mono/pom.xml
@@ -11,6 +11,7 @@
     </parent>
     <groupId>net.osgiliath.datamigrator.sample</groupId>
     <artifactId>sample-mono</artifactId>
+    <name>datamigrator-sample-mono</name>
     <properties>
         <data-migrator.version>${project.version}</data-migrator.version>
         <!-- End test configuration-->
