fix some sonarqube alerts

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=OsgiliathEnterprise_data-migrator
 sonar.projectName=Data migrator project
 sonar.projectVersion=1.0
+sonar.exclusions=**/generated-sources/**,**/*.html
 sonar.issue.ignore.multicriteria=S125,J125
 sonar.issue.ignore.multicriteria.S125.resourceKey=**/*.xml
 sonar.issue.ignore.multicriteria.S125.ruleKey=xml:S125
