--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -65,7 +65,6 @@
         <module>modules</module>
         <module>core</module>
         <module>datamigrator-archetype</module>
-        <module>gex</module>
     </modules>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -82,7 +81,7 @@
         <jdbc.h2.version>2.3.232</jdbc.h2.version>
         <jdbc.postgresql.version>42.7.7</jdbc.postgresql.version>
         <jdbc.mysql.version>9.3.0</jdbc.mysql.version>
-        <jdbc.oracle.version>23.8.0.25.04</jdbc.oracle.version>
+        <jdbc.oracle.version>23.9.0.25.07</jdbc.oracle.version>
         <jdbc.mssql.version>12.10.1.jre11</jdbc.mssql.version>
         <jdbc.mariadb-java-client.version>3.5.4</jdbc.mariadb-java-client.version>
         <hibernate.version>6.6.22.Final</hibernate.version>
@@ -350,7 +349,7 @@
                 <plugin>
                     <groupId>org.hibernate.tool</groupId>
                     <artifactId>hibernate-tools-maven</artifactId>
-                    <version>${hibernate.version}</version>
+                    <version>${hibernate-tools.version}</version>
                     <configuration>
                         <ejb3>true</ejb3>
                         <jdk5>true</jdk5>
@@ -500,7 +499,7 @@
         <profile>
             <id>coverage</id>
             <properties>
-                <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
+                <sonar-maven-plugin.version>5.1.0.4751</sonar-maven-plugin.version>
                 <sonar.organization>osgiliathenterprise</sonar.organization>
                 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                 <sonar.coverage.jacoco.xmlReportPaths>
