multiple processing optimizations

--- a/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
@@ -30,9 +30,11 @@ source.database.port=3306
 #source.database.port = 5432
 source.database.baseurl=jdbc:mysql://127.0.0.1:${source.database.port}
 #source.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}/database
+# keepalive options for pg tcpKeepAlive=true
 #source.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${source.database.port}
+# keepalive options for oracle socketKeepAlive=true&socketTimeout=60000
 #source.database.baseurl = jdbc:sqlserver://127.0.0.1:${source.database.port}
-source.database.options=zeroDateTimeBehavior=convertToNull
+source.database.options=zeroDateTimeBehavior=convertToNull&connectTimeout=0&socketTimeout=0&autoReconnect=true
 source.datasource.defaultSchemaName=test
 #source.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 source.database.url=${source.database.baseurl}/${source.datasource.defaultSchemaName}?${source.database.options}
@@ -56,10 +58,12 @@ source.jdbc.dialect = org.hibernate.dialect.MySQLDialect
 target.database.driver=com.mysql.cj.jdbc.Driver
 target.database.port=3306
 #target.database.baseurl = jdbc:postgresql://127.0.0.1:${target.database.port}/database
+# keepalive options for tcpKeepAlive=true
 #target.database.baseurl = jdbc:oracle:thin:@//127.0.0.1:${target.database.port}
+# keepalive options for oracle socketKeepAlive=true&socketTimeout=60000
 #target.database.baseurl = jdbc:sqlserver://127.0.0.1:${target.database.port}
 target.database.baseurl=jdbc:mysql://127.0.0.1:${target.database.port}
-target.database.options=zeroDateTimeBehavior=convertToNull
+target.database.options=zeroDateTimeBehavior=convertToNull&connectTimeout=0&socketTimeout=0&autoReconnect=true&rewriteBatchedStatements=true&cachePrepStmts=true
 target.datasource.defaultSchemaName=test
 #target.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 target.database.url=${target.database.baseurl}/${target.datasource.defaultSchemaName}?${target.database.options}
