--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.osgiliath.datamigrator</groupId>
@@ -17,6 +18,10 @@
         <testcontainers.version>1.21.3</testcontainers.version>
         <jgrapht.version>1.5.2</jgrapht.version>
         <tinkerpop.version>3.7.4</tinkerpop.version>
+        <javax.transaction.jta.version>1.1</javax.transaction.jta.version>
+        <net.datafaker.version>2.4.4</net.datafaker.version>
+        <jakarta.persistenceapi.version>3.1.0</jakarta.persistenceapi.version>
+        <ehcache.version>3.10.8</ehcache.version>
     </properties>
     <build>
         <plugins>
@@ -103,7 +108,7 @@
             <dependency>
                 <groupId>org.ehcache</groupId>
                 <artifactId>ehcache</artifactId>
-                <version>3.10.8</version>
+                <version>${ehcache.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jgrapht</groupId>
@@ -147,17 +152,17 @@
             <dependency>
                 <groupId>javax.transaction</groupId>
                 <artifactId>jta</artifactId>
-                <version>1.1</version>
+                <version>${javax.transaction.jta.version}</version>
             </dependency>
             <dependency>
                 <groupId>jakarta.persistence</groupId>
                 <artifactId>jakarta.persistence-api</artifactId>
-                <version>3.1.0</version>
+                <version>${jakarta.persistenceapi.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.datafaker</groupId>
                 <artifactId>datafaker</artifactId>
-                <version>2.4.4</version>
+                <version>${net.datafaker.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
