--- a/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
@@ -63,7 +63,10 @@ target.database.port=3306
 # keepalive options for oracle socketKeepAlive=true&socketTimeout=60000
 #target.database.baseurl = jdbc:sqlserver://127.0.0.1:${target.database.port}
 target.database.baseurl=jdbc:mysql://127.0.0.1:${target.database.port}
+# Mysql
 target.database.options=zeroDateTimeBehavior=convertToNull&connectTimeout=0&socketTimeout=0&autoReconnect=true&rewriteBatchedStatements=true&cachePrepStmts=true
+# Postgres
+# target.database.options=rewriteBatchedStatements=true
 target.datasource.defaultSchemaName=test
 #target.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 target.database.url=${target.database.baseurl}/${target.datasource.defaultSchemaName}?${target.database.options}
