--- a/sample-mono/database.properties
+++ b/sample-mono/database.properties
@@ -31,6 +31,7 @@ target.database.baseurl = jdbc:postgresql://localhost:5433/test
 #target.database.baseurl = jdbc:mysql://localhost:3306/test
 #target.database.baseurl=jdbc:mysql://localhost:55577
 target.database.options=zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
+# mysql target.database.options=zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&rewriteBatchedStatements=true
 target.datasource.defaultSchemaName=test
 target.database.url=${target.database.baseurl}?${target.database.options}&search_path=${target.datasource.defaultSchemaName}
 target.datasource.username=postgres
