--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,8 @@ jobs:
           cd .. 
           ./mvnw -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Pentities-from-changelog,coverage -Dsonar.projectKey=OsgiliathEnterprise_data-migrator
           rm -rf src/main/java
+      - name: List keys
+        run: gpg -K
       - name: Verify Whether a Release is Ready
         id: release
         shell: bash
