--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <module>core</module>
         <module>datamigrator-archetype</module>
     </modules>
-    
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -530,6 +530,7 @@
                 <module>modules</module>
                 <module>core</module>
                 <module>datamigrator-archetype</module>
+                <module>sample-mono</module>
                 <module>report-aggregate</module>
             </modules>
         </profile>
